# OpenGLStudy

./: .gitignore  CMakeLists.txt  Readme.md
res/shaders/: Basic.shader
src/: CMakeLists.txt  GlobalFunctions.cpp  GlobalFunctions.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  test1.cpp
src/util/: Logger.h
test/: CMakeLists.txt  test1.cpp
